--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,15 +16,19 @@ on:
     - 'feature/**'
 
 jobs:
-  test:
-    name: test-pipeline
+  build:
+    name: build-image
     runs-on: ubuntu-20.04
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Checkout opa/contrib
+      - name: Checkout open-policy-agent/contrib
         uses: actions/checkout@master
         with:
           repository: open-policy-agent/contrib
           ref: refs/heads/main
+          path: pam_opa
+        
+      - name: Debug task
+        run: ls -al
