--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -30,5 +30,5 @@ jobs:
           ref: refs/heads/main
           path: pam_opa
         
-      - name: Debug task
-        run: ls -al
+      - name: Build project
+        run: make & make up
