--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,5 +31,5 @@ jobs:
           path: pam_opa
         
       - name: Build project
-        run: make & make up
+        run: make && make up
         working-directory: pam_opa
