--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -33,9 +33,9 @@ jobs:
       - name: Install dependencies
         run: |
           set -e -x
-          apt-get install libpam0g-dev
-          apt-get install libcurl4-gnutls-dev
-          apt-get install autoconf
+          sudo apt-get install libpam0g-dev
+          sudo apt-get install libcurl4-gnutls-dev
+          sudo apt-get install autoconf
       
       - name: Checkout akheron/jansson
         uses: actions/checkout@master
