Add path ignores

--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -9,6 +9,7 @@ on:
     paths-ignore:
     - '.vscode/**'
     - README.md
+    - '.github/workflows/vanilla-build-pipeline.yaml'
   pull_request:
     branches: 
     - master
