--- a/.github/workflows/docker-pipeline.yml
+++ b/.github/workflows/docker-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout open-policy-agent/contrib
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           repository: open-policy-agent/contrib
           ref: refs/heads/main
