--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -25,7 +25,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Checkout open-policy-agent/contrib
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           repository: open-policy-agent/contrib
           ref: refs/heads/main
@@ -39,7 +39,7 @@ jobs:
           sudo apt-get install autoconf
       
       - name: Checkout akheron/jansson
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
           repository: akheron/jansson
           ref: refs/heads/master
