Check for /lib/security or equiv

--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -54,4 +54,4 @@ jobs:
           sudo make install
 
       - name: Check if lib/security exists
-        run: ls -al /lib/security
+        run: tree /lib
