--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -54,4 +54,4 @@ jobs:
           sudo make install
 
       - name: Check if lib/security exists
-        run: tree /lib
+        run: find /lib/ | grep "pam"
