Copy the pam module to /lib/security/

--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -53,5 +53,11 @@ jobs:
           ./configure --prefix=/usr && make
           sudo make install
 
-      - name: Check if lib/security exists
-        run: find /lib/ | grep "pam"
+      - name: Copy the pam module to /lib/x86_64-linux-gnu/security/
+        run: cp $GITHUB_WORKSPACE/pam_opa/pam/ /lib/x86_64-linux-gnu/security/
+
+      - name: Check if /etc/pam.d/sudo exists
+        run: |
+          set -e -x
+          ls /etc/pam.d/
+          cat /etc/pam.d/sudo
