--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           repository: open-policy-agent/contrib
           ref: refs/heads/main
-          path: pam_opa
+          path: contrib
 
       - name: Checkout akheron/jansson
         uses: actions/checkout@v2
@@ -54,7 +54,10 @@ jobs:
           sudo make install
 
       - name: Copy the pam module to /lib/x86_64-linux-gnu/security/
-        run: cp pam_opa/pam/ /lib/x86_64-linux-gnu/security/
+        run: |
+          set -e -x 
+          ls -l
+          cp contrib/pam_opa/pam/ /lib/x86_64-linux-gnu/security/
 
       - name: Check if /etc/pam.d/sudo exists
         run: |
