--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -60,7 +60,10 @@ jobs:
           sudo cp contrib/pam_opa/pam/* /lib/x86_64-linux-gnu/security/
 
       - name: Configure OPA as PAM module
-        run: sudo echo auth required /lib/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sshd/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
+        run: |
+          set -e -x
+          chmod 777 /etc/pam.d/sudo
+          echo auth required /lib/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sshd/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
 
       - name: Execute a priviledged command
         run: sudo ls
