--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -64,6 +64,7 @@ jobs:
           set -e -x
           sudo chmod 777 /etc/pam.d/sudo
           echo auth required /lib/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sshd/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
+          cat /etc/pam.d/sudo
 
       - name: Execute a priviledged command
         run: sudo ls
