--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -18,7 +18,7 @@ on:
 
 jobs:
   build:
-    name: build-image
+    name: playground
     runs-on: ubuntu-20.04
     steps:
       - name: Install dependencies
