--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -56,14 +56,14 @@ jobs:
       - name: Copy the pam module to /lib/x86_64-linux-gnu/security/
         run: |
           set -e -x 
-          ls -l
-          sudo cp contrib/pam_opa/pam/* /lib/x86_64-linux-gnu/security/
+          cd contrib/pam_opa/pam/ && make 
+          sudo cp *.so /lib/x86_64-linux-gnu/security/
 
       - name: Configure OPA as PAM module
         run: |
           set -e -x
           sudo chmod 777 /etc/pam.d/sudo
-          echo auth required /lib/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sshd/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
+          echo auth required /lib/x86_64-linux-gnu/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sshd/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
           cat /etc/pam.d/sudo
 
       - name: Execute a priviledged command
