--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -27,6 +27,7 @@ jobs:
           sudo apt-get install libpam0g-dev
           sudo apt-get install libcurl4-gnutls-dev
           sudo apt-get install autoconf
+          sudo apt install sshpass
 
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -68,6 +69,6 @@ jobs:
 
       - name: SSH on same server using user 'ops'
         run: |
-          ssh -tt -p 22 ops@localhost -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
+          sshpass -p $REMOTE_PASSWORD ssh -tt -p 22 ops@localhost -o StrictHostKeyChecking=no -o UserKnownHostsFile=/dev/null
           sudo ls /
           exit
