test priviledge command

--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -66,4 +66,4 @@ jobs:
           cat /etc/pam.d/sudo
 
       - name: Execute privileged command and test
-        run: sudo ls
+        run: sudo systemctl status ssh
