--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -65,5 +65,7 @@ jobs:
           echo auth required /lib/x86_64-linux-gnu/security/pam_opa.so url=http://opa-auth-server.herokuapp.com:80 authz_endpoint=/v1/data/sudo/authz display_endpoint=/v1/data/display pull_endpoint=/v1/data/pull log_level=debug >> /etc/pam.d/sudo
           cat /etc/pam.d/sudo
 
-      - name: Execute privileged command and test
-        run: sudo visudo
+      - name: Peek the sudoers file
+        run: |
+          cd /etc/sudoers.d
+          sudo visudo 
