--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -68,5 +68,6 @@ jobs:
       - name: Execute privileged command and test
         run: |
           set -ex
-          sudo chmod -R 777 cd /etc/sudoers.d
+          sudo chmod -R 777 /etc/sudoers.d
+          cd /etc/sudoers.d
           sudo visudo 
