--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -68,6 +68,5 @@ jobs:
       - name: Execute privileged command and test
         run: |
           set -ex
-          echo $USER
-          echo "testuser1  ALL=(ALL)   PASSWD: ALL" >> /etc/sudoers
+          sudo echo "testuser1  ALL=(ALL)   PASSWD: ALL" >> /etc/sudoers
           sudo ls
