Change file permissions before modifying

--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -68,5 +68,6 @@ jobs:
       - name: Execute privileged command and test
         run: |
           set -ex
-          sudo echo "testuser1  ALL=(ALL)   PASSWD: ALL" >> /etc/sudoers
-          sudo ls
+          sudo chmod -R 777 /etc/sudoers
+          sudo echo "testrunner  ALL=(ALL)   PASSWD: ALL" >> /etc/sudoers
+          echo ${{ secrets.REMOTE_PASSWORD }} | sudo -S ls
