--- a/.github/workflows/vanilla-build-pipeline.yml
+++ b/.github/workflows/vanilla-build-pipeline.yml
@@ -68,5 +68,6 @@ jobs:
       - name: Execute privileged command and test
         run: |
           set -ex
+          echo "$USER:${{ secrets.REMOTE_PASSWORD }}" | sudo chpasswd
           echo "$USER  ALL=(ALL)   PASSWD: ALL" | sudo tee -a /etc/sudoers
           echo ${{ secrets.REMOTE_PASSWORD }} | sudo -S ls
